--- a/MeetingPlanner/Views/InvitationsView.xaml
+++ b/MeetingPlanner/Views/InvitationsView.xaml
@@ -1,27 +1,21 @@
-﻿<!-- Views/InvitationsView.xaml -->
-<UserControl x:Class="MeetingPlanner.Views.InvitationsView"
+﻿<UserControl x:Class="MeetingPlanner.Views.InvitationsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:viewModels="clr-namespace:MeetingPlanner.ViewModels"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:converters="clr-namespace:MeetingPlanner.Converters"
+             xmlns:services="clr-namespace:MeetingPlanner.Services"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    
+
     <UserControl.Resources>
         <Style TargetType="Button" x:Key="PrimaryButtonStyle">
-            <Setter Property="Background" Value="#0E294B"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="FontSize" Value="14"/>
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Height" Value="32"/>
-            <Setter Property="Cursor" Value="Hand"/>
-            <Setter Property="Padding" Value="10,0"/>
-            <Setter Property="Margin" Value="5"/>
+            <!-- Стиль кнопок остается без изменений -->
         </Style>
 
+        <converters:StatusToStringConverter x:Key="StatusToStringConverter"/>
     </UserControl.Resources>
+
     <Grid>
         <ScrollViewer>
             <StackPanel>
@@ -55,6 +49,11 @@
                                         <Run Text="{Binding Event.StartTime, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}"/>
                                         <Run Text=" - "/>
                                         <Run Text="{Binding Event.EndTime, StringFormat='{}{0:HH:mm}'}"/>
+                                    </TextBlock>
+
+                                    <TextBlock Margin="0,5" FontStyle="Italic">
+                                        <Run Text="Ваш текущий ответ: "/>
+                                        <Run Text="{Binding Status, Converter={StaticResource StatusToStringConverter}}"/>
                                     </TextBlock>
 
                                     <StackPanel Orientation="Horizontal" 
